Fixed layout issues on card back

--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -26,10 +26,8 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  color: white;
-  font-size: 40px;
-  font-weight: bold;
-  line-height: 2em;
+  font-size: 1em;
+  color: rgb(29, 161, 242);
   text-align: center;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
@@ -41,35 +39,50 @@
 
 .card__face--back {
   border: 1px solid rgb(29, 161, 242);
-  display: flexbox;
-  flex-direction: column;
-  font-size: 1em;
-  color: rgb(29, 161, 242);
+  /*font-size: 1em;*/
   background: rgb(30, 33, 35);
   transform: rotateY(180deg);
 }
 
-.back-header {
-  height: 10%;
-  width: 100%;
+.download-options {
+  margin-top: 2em;
 }
 
 .back-content {
-  height: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
+  margin-top: 4em;
+  height: 1.5em;
+  width: 100%;
+}
+
+.back-content-button {
+  height: 100%;
+  color: white;
+  width: 8em;
 }
 
 .checkbox {
-  height: 3em;
-  width: 3em;
+  height: 1.5em;
+  width: 1.5em;
+}
+
+.checkbox-container {
+  font-size: 1.25em;
+}
+
+@supports not (-webkit-touch-callout: none) {
+   .back-content-button {
+      background-color: rgb(29, 161, 242);
+  }
 }
 
 @media screen and (max-width: 400px) and (orientation: portrait) {
   .scene {
-    width: 16em;
-    height: 10em;
-  }
-
-  .card {
+    width: 20em;
+    height: 12.5em;
   }
 }
 
@@ -77,9 +90,6 @@
   .scene {
     width: 32em;
     height: 20em;
-  }
-
-  .card {
   }
 }
 
@@ -93,12 +103,19 @@
   }
 }
 
-@media screen and (min-width: 1024px) and (orientation: landscape) {
+@media screen and (min-width: 1281px) {
   .scene {
     width: 48em;
     height: 30em;
   }
 
-  .card {
+  .card__face {
+    font-size: 1em;
   }
+
+  .checkbox {
+    height: 1.25em;
+    width: 1.25em;
+  }
+
 }
